--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "documentcloud-pages": "https://github.com/documentcloud/documentcloud-pages.git#master",
     "visualsearch":        "~0.5.1",
     "jquery.payment":      "~1.3.2",
-    "html5shiv":           "~3.7.3"
+    "html5shiv":           "~3.7.3",
+    "bootstrap":           "~4.0.0"
   },
   "moduleType": [
     "globals"
