Mark bower and broccoli as devDependencies

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
     "bower":    "~1.7.7",
     "broccoli": "~0.16.9"
   }
