--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "visualsearch":        "~0.5.1",
     "jquery.payment":      "~1.3.2",
     "html5shiv":           "~3.7.3",
+    "tether":              "~1.3.2",
     "bootstrap":           "v4-dev"
   },
   "moduleType": [
